tests/baselines/reference/assignmentToReferenceTypes.errors.txt
==== tests/cases/compiler/assignmentToReferenceTypes.ts (4 errors) ====
    // Should all be allowed
    
    module M {
    }
    M = null;
    ~
!!! error TS2304: Cannot find name 'M'.
    
    class C {
    }
    C = null;
    ~
!!! error TS2364: Invalid left-hand side of assignment expression.
    
    enum E {
    }
    E = null;
    ~
!!! error TS2364: Invalid left-hand side of assignment expression.
    
    function f() { }
    f = null;
    ~
!!! error TS2364: Invalid left-hand side of assignment expression.
    
    var x = 1;
    x = null;
    
    function g(x) {
        x = null;
    }